src/test/compile-fail/item-name-overload.rs
// -*- rust -*-

mod foo {
  fn bar[T](T f) -> int { ret 17; }
  type bar[U, T] = tup(int, U, T);
}

fn main() {}
